--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,1 +1,6 @@
-<p>{{ todo.title }}</p>
+
+<div [ngClass]="setClasses()">
+	<input type="checkbox">
+	<p>{{ todo.title }}</p>
+	<button class="del">x</button>
+</div>
