--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,5 +1,8 @@
 
-<app-todo-item *ngFor="let todo of todos" [todo]="todo">
-<!-- no html shows here -->
+<app-todo-item 
+	*ngFor="let todo of todos" 
+	[todo]="todo" 
+	(deleteTodo)="deleteTodo($event)">
+
 	
 </app-todo-item> 
